# quickdrop

./: .gitignore  Cargo.toml  README.md  config.toml
src/: benchmark.rs  compression.rs  config.rs  error.rs  lib.rs  main.rs  network.rs  simd.rs  transfer.rs  utils.rs  zero_copy.rs
