[package]
name = "quick_drop"
version = "0.1.0"
edition = "2021"
authors = ["Mohammed Alwhaeidi"]
description = "A high-performance, secure file transfer tool for enterprises"
license = "MIT"

[dependencies]
clap = "2.34"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
indicatif = "0.17"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
aes-gcm = "0.10"
rand = "0.8"
bit-vec = "0.6"
lz4_flex = "0.11"

# cargo run -- --config config.toml --mode client --file 
# cargo run -- --config config.toml --mode server 